--- a/make_df.ipynb
+++ b/make_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "[1030 rows x 9 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -264,6 +264,50 @@
        "      <td>676.0</td>\n",
        "      <td>28</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>540.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1055.0</td>\n",
+       "      <td>676.0</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>332.5</td>\n",
+       "      <td>142.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>932.0</td>\n",
+       "      <td>594.0</td>\n",
+       "      <td>270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>332.5</td>\n",
+       "      <td>142.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>932.0</td>\n",
+       "      <td>594.0</td>\n",
+       "      <td>365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>198.6</td>\n",
+       "      <td>132.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>192.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>978.4</td>\n",
+       "      <td>825.5</td>\n",
+       "      <td>360</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -271,19 +315,36 @@
       "text/plain": [
        "   Cement  Blast Furnace Slag  Fly Ash  Water  Superplasticizer  \\\n",
        "0   540.0                 0.0      0.0  162.0               2.5   \n",
+       "1   540.0                 0.0      0.0  162.0               2.5   \n",
+       "2   332.5               142.5      0.0  228.0               0.0   \n",
+       "3   332.5               142.5      0.0  228.0               0.0   \n",
+       "4   198.6               132.4      0.0  192.0               0.0   \n",
        "\n",
        "   Coarse Aggregate  Fine Aggregate  Age  \n",
-       "0            1040.0           676.0   28  "
+       "0            1040.0           676.0   28  \n",
+       "1            1055.0           676.0   28  \n",
+       "2             932.0           594.0  270  \n",
+       "3             932.0           594.0  365  \n",
+       "4             978.4           825.5  360  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dt = df[::1].drop( columns=['Strength'],axis=1)\n",
-    "dt[:1:]"
+    "dt = df[::1].drop(columns=['Strength'],axis=1)\n",
+    "dt[:5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt.to_csv(\"data/five_row_test.csv\",index=False)"
    ]
   }
  ],
