Prompt for research strenght added

--- a/exo_beton _with_pipeline.ipynb
+++ b/exo_beton _with_pipeline.ipynb
@@ -48,6 +48,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
