--- a/make_df.ipynb
+++ b/make_df.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +250,7 @@
        "      <th>Coarse Aggregate</th>\n",
        "      <th>Fine Aggregate</th>\n",
        "      <th>Age</th>\n",
+       "      <th>Strength</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -263,6 +264,7 @@
        "      <td>1040.0</td>\n",
        "      <td>676.0</td>\n",
        "      <td>28</td>\n",
+       "      <td>79.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -274,6 +276,7 @@
        "      <td>1055.0</td>\n",
        "      <td>676.0</td>\n",
        "      <td>28</td>\n",
+       "      <td>61.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -285,6 +288,7 @@
        "      <td>932.0</td>\n",
        "      <td>594.0</td>\n",
        "      <td>270</td>\n",
+       "      <td>40.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -296,6 +300,7 @@
        "      <td>932.0</td>\n",
        "      <td>594.0</td>\n",
        "      <td>365</td>\n",
+       "      <td>41.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -307,6 +312,7 @@
        "      <td>978.4</td>\n",
        "      <td>825.5</td>\n",
        "      <td>360</td>\n",
+       "      <td>44.30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -320,27 +326,27 @@
        "3   332.5               142.5      0.0  228.0               0.0   \n",
        "4   198.6               132.4      0.0  192.0               0.0   \n",
        "\n",
-       "   Coarse Aggregate  Fine Aggregate  Age  \n",
-       "0            1040.0           676.0   28  \n",
-       "1            1055.0           676.0   28  \n",
-       "2             932.0           594.0  270  \n",
-       "3             932.0           594.0  365  \n",
-       "4             978.4           825.5  360  "
+       "   Coarse Aggregate  Fine Aggregate  Age  Strength  \n",
+       "0            1040.0           676.0   28     79.99  \n",
+       "1            1055.0           676.0   28     61.89  \n",
+       "2             932.0           594.0  270     40.27  \n",
+       "3             932.0           594.0  365     41.05  \n",
+       "4             978.4           825.5  360     44.30  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dt = df[::1].drop(columns=['Strength'],axis=1)\n",
+    "dt = df[:5:]\n",
     "dt[:5:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
